force-app/main/default/objects/custom_create137__c/custom_create137__c.object-meta.xml
<CustomObject>
    <label>Custom created object137</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects137</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>