force-app/main/default/objects/custom_create137__c/fields/custom_create_137field686__c.field-meta.xml
<CustomField>
    <fullName>custom_create_137field686__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 137field686</label>
    <type>Checkbox</type>
</CustomField>